# elSpectro

./: .gitmodules  CMakeLists.txt  README.md
core/: Bremsstrahlung.cpp  Bremsstrahlung.h  BremstrPhoton.cpp  BremstrPhoton.h  CMakeLists.txt  CollidingParticle.cpp  CollidingParticle.h  CurrentEventInfo.cpp  CurrentEventInfo.h  DecayGammaN_Test.cpp  DecayGammaN_Test.h  DecayManager.cpp  DecayManager.h  DecayModel.cpp  DecayModel.h  DecayModelDnpee.cpp  DecayModelDnpee.h  DecayModelQ2W.cpp  DecayModelQ2W.h  DecayModelW.cpp  DecayModelW.h  DecayModelst.cpp  DecayModelst.h  DecayModelst0.cpp  DecayModelst0.h  DecayVectors.cpp  DecayVectors.h  DecayingParticle.cpp  DecayingParticle.h  DistConst.h  DistFlatMass.cpp  DistFlatMass.h  DistTF1.cpp  DistTF1.h  DistTH1.cpp  DistTH1.h  DistTH2.cpp  DistTH2.h  DistUniform.h  DistVirtPhotFlux_xy.cpp  (+76 more)
core/src/: Load.C  elspectro.cpp
etc/: el_pdg_table.txt
examples/: CLAS_JPAC_Jpsi.C  ComparePhaseSpaceto2.C  ComparePhaseSpaceto3Rho.C  ComparePhaseSpaceto4PiRho.C  ComparePhaseSpaceto5RhoPhi.C  EIC_JPAC_DLambdaCStar_Hists.C  EIC_JPAC_X3872.C  EIC_JPAC_X3872_Hists.C  EIC_JPAC_Y.C  EIC_JPAC_Y_Hists.C  EIC_JPAC_Zn.C  EIC_JPAC_nZc.C  EIC_JPAC_nZc_Hists.C  ElectronDistribution.C  JpacAmpPenta.C  JpacAmpRho.C  JpacAmpVectorJpsiPiPi.C  JpacAmpVectorJpsiPiPi_hepmc3.C  JpacAmpX3872.C  JpacAmpZcNeutron.C  Load.C  MaxOfPhaseSpace.C  MesonEx_JpsiPenta.C  MesonEx_KLambda.C  MesonEx_n3pi.C  MesonEx_p2pi.C  PhotoD_npDiLepton.C  Photo_JPAC_nZc_Hists_Blend.C  Photo_p2pi.C  RunRhoProton.C
